# cocktail-party-tse

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt
configs/: config.yaml
configs/inference/: default.yaml
configs/model/: auditory_tse.yaml  sepformer.yaml  tasnet.yaml
configs/training/: default.yaml  finetune.yaml
docs/: 学术报告.md
experiments/: evaluate.py  generate_synthetic_data.py  inference_demo.py  prepare_data.py  train.py  train_quick.py
notebooks/: demo.ipynb
src/: __init__.py
src/audio/: __init__.py  augmentation.py  filterbank.py  transforms.py
src/evaluation/: __init__.py  evaluator.py  metrics.py
src/inference/: __init__.py  pipeline.py
src/models/: __init__.py  auditory_tse.py  decoder.py  encoder.py  speaker_encoder.py
src/models/separation/: __init__.py  conv_tasnet.py  cross_attn_mask.py  sepformer.py
src/training/: __init__.py  callbacks.py  losses.py  optimizer.py  trainer.py
tests/: __init__.py  test_encoder.py  test_metrics.py  test_models.py
