[project]
name = "auditory-tse"
version = "0.1.0"
description = "Auditory-inspired Target Speaker Extraction for the Cocktail Party Problem"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Developer"}
]
keywords = [
    "speech-separation",
    "target-speaker-extraction",
    "cocktail-party-problem",
    "deep-learning",
    "auditory-attention",
    "audio-processing",
]

[project.scripts]
auditory-train = "experiments.train:main"
auditory-eval = "experiments.evaluate:main"
auditory-demo = "experiments.inference_demo:main"

[tool.ruff]
target-version = "py310"
line-length = 100
exclude = [
    ".git",
    ".venv",
    "venv",
    "__pycache__",
    "checkpoints",
    "data",
    "notebooks",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "SIM", # flake8-simplify
    "C4",  # flake8-comprehensions
    "RUF", # Ruff-specific rules
]
ignore = [
    "E501",  # line-too-long (handled by formatter)
    "B008",  # do-not-perform-function-calls-in-argument-defaults
]
fixable = ["ALL"]

[tool.ruff.lint.isort]
known-first-party = ["src"]
force-single-line = false

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "lf"

[tool.pytest.ini_options]
minversion = "8.0"
addopts = [
    "--strict-markers",
    "--strict-config",
    "-ra",
    "-q",
]
testpaths = ["tests"]
pythonpath = ["."]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "gpu: marks tests that require CUDA GPU",
]
